fix minor spacing issues

--- a/src/app/artwork/artwork.component.scss
+++ b/src/app/artwork/artwork.component.scss
@@ -9,6 +9,10 @@ h1{
   position: relative;
   margin-top: 2em;
 }
+span.spacer{
+  color: transparent;
+  font-size: 1px;
+}
 a{
   text-decoration: underline;
   font-family: sans-serif;
