--- a/src/app/home/form/form.component.scss
+++ b/src/app/home/form/form.component.scss
@@ -71,6 +71,9 @@ input[type="checkbox"]:checked:after{
   line-height: 17px;
   background-color: #0f8000;
 }
+span{
+  color: transparent;
+}
 label{
   display: block;
   text-align: center;
